--- a/gtk-3.0/apps/nautilus.css
+++ b/gtk-3.0/apps/nautilus.css
@@ -5,7 +5,7 @@ NautilusWindow * {
 /* desktop mode */
 .nautilus-desktop.nautilus-canvas-item {
 	color: @bg_color;
-	text-shadow: 1 1 alpha (#000000, 0.8);
+	text-shadow: 1px 1px alpha (#000000, 0.8);
 }
 
 .nautilus-desktop.nautilus-canvas-item:active {
