Attempt at resseting radio button / checkbox background colors

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -402,7 +402,8 @@ row:selected:focused {
 .check row,
 .radio,
 .radio row {
-  text-shadow: none;;
+  text-shadow: none;
+  background-color: @transparent;
 }
 
 .check,
