--- a/gtk-3.0/apps/unity.css
+++ b/gtk-3.0/apps/unity.css
@@ -6,10 +6,8 @@ UnityPanelWidget,
     border-top-color: shade (@dark_bg_color, 1.0);
     border-style: solid;
     border-width: 0px 0 0 0;
-
+    background-color: @transparent;
     color: #DDDDDD;
-
-    -unico-border-gradient: none;
 }
 
 .unity-panel.menubar,
